--- a/data_analysis/functional_score_cal/readme
+++ b/data_analysis/functional_score_cal/readme
@@ -1,1 +1,6 @@
+This folder contains the following files that were used for functional score calculation:
 
+1. Ind_Exon.Rmd
+2. norm_classification_parm.Rmd
+3. KnitReport_github.R
+4. functions.R
