--- a/data_analysis/readme
+++ b/data_analysis/readme
@@ -1,6 +1,1 @@
-This folder contains three files:
-
-1. Ind_Exon.Rmd
-2. norm_classification_parm.Rmd
-3. KnitReport_github.R
-4. functions.R
+This folder contains two subfolders
