remove abs path

--- a/data_analysis/functional_score_cal/Ind_Exon.Rmd
+++ b/data_analysis/functional_score_cal/Ind_Exon.Rmd
@@ -22,7 +22,7 @@ params:
     
   Output_dir:
     label: "Output Dir:"
-    value: "/research/bsi/projects/breast/s108235.tripneg_Couch/projects/s108235.tripneg/breast_requests/Predisposition_genes/Chunling/BRCA2/results/11_2023/Ind_1.5/"
+    value: "/respath/"
     input: text       
   
   loessSubset:
@@ -87,9 +87,9 @@ library(threejs)
 library (ROCR);
 library(pROC)
 
-rdir <- '//research/bsi/projects/breast/s108235.tripneg_Couch/projects/s108235.tripneg/breast_requests/Predisposition_genes/Chunling/BRCA2/rpgm/'
+rdir <- '//rpgm/'
 
-exonDataList <- readr::read_table("/research/bsi/projects/breast/s108235.tripneg_Couch/projects/s108235.tripneg/breast_requests/Predisposition_genes/Chunling/BRCA2/data/exonDataList.txt")
+exonDataList <- readr::read_table("/research/data/exonDataList.txt")
 Exn <- paste0("E", params$Exon)
 loessSubset <- params$loessSubset
 EventCount_Filter <- params$EventCount_Filter
@@ -177,7 +177,7 @@ We will subset data within the target region as shown below.
 
 ```{r}
 
-target <- read.csv("/research/bsi/projects/breast/s108235.tripneg_Couch/projects/s108235.tripneg/breast_requests/Predisposition_genes/Chunling/BRCA2/data/10_2023_curation//chunling_target.csv")
+target <- read.csv("/research///chunling_target.csv")
 
 kable(target[, c("Exon", "Start", "End")])
 ```
@@ -317,7 +317,7 @@ if(length(filenames) >1){ # two experiments
 
 ```{r}
 ## update EvenType using Chunling's latest file
-ET <- read.csv("/research/bsi/projects/breast/s108235.tripneg_Couch/projects/s108235.tripneg/breast_requests/Predisposition_genes/Chunling/BRCA2/data/10_2023_curation/chunling_ET.csv") %>% rename(EventType = ET) %>% select(-uid)
+ET <- read.csv("/research//chunling_ET.csv") %>% rename(EventType = ET) %>% select(-uid)
 
 #find the row indices
 row_idx <- match(ET$uPOS, wide$uPOS)
@@ -794,7 +794,7 @@ sliceRs <- wide %>% filter(spliceR == TRUE)
 
 ```{r}
 library(readxl)
-Varaints_to_be_excluded_when_use_MAVE_internal_control_to_build_model <- read_excel("/research/bsi/projects/breast/s108235.tripneg_Couch/projects/s108235.tripneg/breast_requests/Predisposition_genes/Chunling/BRCA2/data/10_2023_curation/Varaints to be excluded when use MAVE internal control to build model.xlsx")
+Varaints_to_be_excluded_when_use_MAVE_internal_control_to_build_model <- read_excel("/research//Varaints to be excluded when use MAVE internal control to build model.xlsx")
 
 Varaints_to_be_excluded_when_use_MAVE_internal_control_to_build_model <- Varaints_to_be_excluded_when_use_MAVE_internal_control_to_build_model %>% mutate(uPOS = paste(GRCh38Location-1, REF, ALT, sep = "_") )
                                                                                                                     
